--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -27,7 +27,7 @@ ja:
     sessions:
       signed_in: 'ログインしました。'
 #      signed_in: 'Signed in successfully.'
-      signed_out: 'ログアウトしました。'
+      signed_out: 'ログアウトしました。またのご利用お待ちしております'
 #      signed_out: 'Signed out successfully.'
     passwords:
       send_instructions: 'パスワードのリセット方法を数分以内にメールでご連絡します。'
@@ -40,7 +40,7 @@ ja:
       confirmed: 'アカウントを登録しました。'
 #      confirmed: 'Your account was successfully confirmed. You are now signed in.'
     registrations:
-      signed_up: 'アカウント登録を受け付けました。確認のメールをお送りします。'
+      signed_up: 'ようこそ！アカウント登録が完了しました。ぜひ楽しんでくださいね。'
 #      signed_up: 'You have signed up successfully. If enabled, a confirmation was sent to your e-mail.'
       updated: 'アカウントを更新しました。'
 #      updated: 'You updated your account successfully.'
