--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -3,16 +3,29 @@ ja:
     messages:
       not_found: "は見つかりませんでした"
 #      not_found: "not found"
-      already_confirmed: "は既に登録済みです"
+      already_confirmed: 'は既に登録済みです。ログインしてください。'
 #      already_confirmed: "was already confirmed"
       not_locked: "は凍結されていません"
 #      not_locked: "was not locked"
+      confirmation_period_expired: "の期限が切れました。確認する必要があります。 新しくリクエストしてください。"
+      expired: 'の有効期限が切れました。新しくリクエストしてください。'
+      not_locked: 'は凍結されていません。'
+      not_saved:
+        one: "エラーが発生したため %{resource} は保存されませんでした:"
+        other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした:"
+      taken: "は既に使用されています。"
+      blank: "が入力されていません。"
+      too_short: "は%{count}文字以上に設定して下さい。"
+      too_long: "は%{count}文字以下に設定して下さい。"
+      invalid: "は有効でありません。"
+      confirmation: "が内容とあっていません。"
 
   devise:
     failure:
-      unauthenticated: 'ログインしてください。'
+      already_authenticated: 'すでにログインしています。'
+      unauthenticated: 'アカウント登録もしくはログインしてください。'
 #      unauthenticated: 'You need to sign in or sign up before continuing.'
-      unconfirmed: '本登録を行ってください。'
+      unconfirmed: 'メールアドレスの本人確認が必要です。'
 #      unconfirmed: 'You have to confirm your account before continuing.'
       locked: 'あなたのアカウントは凍結されています。'
 #      locked: 'Your account is locked.'
@@ -22,23 +35,31 @@ ja:
 #      invalid_token: 'Invalid authentication token.'
       timeout: 'セッションがタイムアウトしました。もう一度ログインしてください。'
 #      timeout: 'Your session expired, please sign in again to continue.'
-      inactive: 'アカウントがアクティベートされていません。'
+      inactive: 'アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。'
 #      inactive: 'Your account was not activated yet.'
+      last_attempt: 'あなたのアカウントが凍結される前に、複数回の操作がおこなわれています。'
+      not_found_in_database: "メールアドレスもしくはパスワードが不正です。"
+      timeout: 'セッションがタイムアウトしました。もう一度ログインしてください。'
     sessions:
       signed_in: 'ログインしました。'
 #      signed_in: 'Signed in successfully.'
       signed_out: 'ログアウトしました。またのご利用お待ちしております'
 #      signed_out: 'Signed out successfully.'
+      already_signed_out: '既にログアウト済みです。'
     passwords:
       send_instructions: 'パスワードのリセット方法を数分以内にメールでご連絡します。'
 #      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
-      updated: 'パスワードを変更しました。'
+      updated: 'パスワードが正しく変更されました。'
 #      updated: 'Your password was changed successfully. You are now signed in.'
+      no_token: "このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。"
+      send_paranoid_instructions: "あなたのメールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。"
+      updated_not_active: 'パスワードが正しく変更されました。'
     confirmations:
       send_instructions: '登録方法を数分以内にメールでご連絡します。'
 #      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
       confirmed: 'アカウントを登録しました。'
 #      confirmed: 'Your account was successfully confirmed. You are now signed in.'
+      send_paranoid_instructions: "あなたのメールアドレスが登録済みの場合、本人確認用のメールが数分以内に送信されます。"
     registrations:
       signed_up: 'ようこそ！アカウント登録が完了しました。ぜひ楽しんでくださいね。'
 #      signed_up: 'You have signed up successfully. If enabled, a confirmation was sent to your e-mail.'
@@ -46,18 +67,28 @@ ja:
 #      updated: 'You updated your account successfully.'
       destroyed: 'アカウントを削除しました。またのご利用をお待ちしております。'
 #      destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      signed_up_but_inactive: 'ログインするためには、アカウントを有効化してください。'
+      signed_up_but_locked: 'アカウントが凍結されているためログインできません。'
+      signed_up_but_unconfirmed: '本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。'
+      update_needs_confirmation: 'アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。'
     unlocks:
       send_instructions: 'アカウントの凍結解除方法を数分以内にメールでご連絡します。'
 #      send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
       unlocked: 'アカウントを凍結解除しました。'
 #      unlocked: 'Your account was successfully unlocked. You are now signed in.'
+      send_paranoid_instructions: 'アカウントが見つかった場合、アカウントの凍結解除方法を数分以内にメールでご連絡します。'
     mailer:
       confirmation_instructions:
-        subject: 'アカウントの登録方法'
+        subject: 'アカウントの登録方法について'
 #        subject: 'Confirmation instructions'
       reset_password_instructions:
-        subject: 'パスワードの再設定'
+        subject: 'パスワードの再設定について'
 #        subject: 'Reset password instructions'
       unlock_instructions:
-        subject: 'アカウントの凍結解除'
+        subject: 'アカウントの凍結解除について'
 #        subject: 'Unlock Instructions'
+      password_change:
+        subject: 'パスワードの変更について'
+    omniauth_callbacks:
+      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
+      success: "%{kind} アカウントによる認証に成功しました。"
